--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -13,7 +13,7 @@
 
     <div class="maine-con">
         {{>header}}
-
+        <p>this site was created by sultan . it uses datr from mapbox.com and weatherstack.com </p>
         <p>{{name}}</p>
     </div>
 
