--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -9,7 +9,7 @@
     <div class="maine-con">
         {{>header}}
 
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, eveniet?</p>
+        <p>Use this site to get your weather!</p>
 
         <form>
             <input type="text" placeholder="Location">
